add sites, made comments and more stuff

--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,7 @@ body{
 }
 
 .box{
-    width: 150px;
-    height: 150px;
+    padding: 10px 40px;
     background-color: var(--dark-blue);
     display: flex;
     justify-content: center;
